<resources>
    <string name="app_name">Shelter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baths">Baths</string>
    <string name="beds">Beds</string>
    <string name="login">Login</string>
    <string name="connect_to_the_people_living_in_your_area">Connect to the people living in your area</string>
    <string name="login_with_google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">608977569789570</string>
    <string name="fb_login_protocol_scheme">fb608977569789570</string>
    <string name="looking_for_a_new_place">Looking for a new place?</string>
    <string name="log_out">Log out</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="min">Min</string>
    <string name="search">Search</string>
    <string name="rel">Rel</string>
    <string name="others">Others</string>
    <string name="sqft">Sqft</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="photos">Photos</string>
    <string name="location">Location</string>
    <string name="choose_state">Choose State</string>
    <string name="choose_city">Choose City</string>
    <string name="enter_the_zip_code">Enter the zip code</string>
    <string name="enter_your_monthly_budget">Enter your monthly budget</string>
    <string name="_2_beds_min">2 Beds (min)</string>
    <string name="property_type">Property type</string>
    <string name="apartment">Apartment</string>
    <string name="any">Any</string>
    <string name="single_family">Single Family</string>
    <string name="multi_family">Multi Family</string>
    <string name="condo">Condo</string>
    <string name="farm">Farm</string>
    <string name="land">Land</string>
    <string name="recreation">Recreation</string>
    <string name="pool">Pool</string>
    <string name="outdoor_space">Outdoor space</string>
    <string name="garage">Garage</string>
    <string name="central_air">Central air</string>
    <string name="fireplace">Fireplace</string>
    <string name="spa">Spa</string>
    <string name="dishwasher">Dishwasher</string>
    <string name="doorman">Doorman</string>
    <string name="elevator">Elevator</string>
    <string name="laundry_room">Laundry room</string>
    <string name="no_fee">No fee</string>
    <string name="cat">Cat</string>
    <string name="date">Date</string>
    <string name="choose_states">Choose states</string>
    <string name="item_name">item name</string>
    <string name="dog">Dog</string>
    <string name="pets_allowance">Pets Allowance</string>
    <string name="foreclosure">Foreclosure</string>
    <string name="is_pending">Is pending</string>
    <string name="not_yet_built">Not yet built</string>
    <string name="contingent">Contingent</string>
    <string name="new_construction">New construction</string>
    <string name="open_house">Open house</string>
    <string name="features">Features</string>
    <string name="contact">Contact</string>
    <string name="lease_terms">Lease terms</string>
    <string name="description">Description</string>
    <string name="see_more_features">See more features</string>
    <string name="apply_online">Apply online</string>
    <string name="group">Group</string>
    <string name="nearby_places">Nearby places</string>
    <string name="floor_plans">Floor plans</string>
    <string name="appName">Shelter</string>
    <string name="hi">Hi,</string>
    <string name="new_to_this_app_tell_us_about_you">New to this app? Tell us about you!</string>
    <string name="login_with_google_or_facebook">Login with Google or Facebook</string>
    <string name="explore">Explore</string>
    <string name="community">Community</string>
    <string name="donation">Donation</string>
    <string name="settings">Settings</string>
    <string name="see_what_people_around_your_area_posting">See what people around your area posting!</string>
    <string name="add_post">Add post</string>
    <string name="post">Post</string>
    <string name="write_something_here">Write something here . . .</string>
    <string name="choose_actions">Choose actions</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="remove">Remove</string>
    <string name="reason">Reason:</string>
    <string name="reason_for_reporting">Reason for reporting...</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="change_postal_code">Change postal code</string>
    <string name="save">Save</string>
    <string name="error">Error</string>
    <string name="user">User</string>
    <string name="edit_post">Edit Post</string>
    <string name="postal_code_dialog">Postal code dialog</string>
    <string name="saved">Saved</string>
    <string name="blogs">Blogs</string>
    <string name="turn_notification_on_to_receive_information_about_your_blog_posts">Turn notification on to receive information about your blog posts.</string>
    <string name="notifications">Notifications</string>


</resources>