<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/location"
        android:textColor="@color/textColorDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edge"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/choose_state"
        android:textAllCaps="false"
        android:textColor="@color/textColorDark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView16"
        tools:layout_editor_absoluteX="30dp" />

    <EditText
        android:id="@+id/city_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_edge"
        android:fontFamily="@font/montserrat_regular"
        android:hint="@string/choose_city"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textColorDark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:layout_editor_absoluteX="30dp" />

    <Button
        android:id="@+id/state_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/rounded_edge"
        android:text="@string/choose_state"
        android:textAllCaps="false"
        android:textColor="@color/textColorDark"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />


    <EditText
        android:id="@+id/zip_code_edit_text"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="30dp"
        android:padding="10dp"
        android:background="@drawable/rounded_edge"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:hint="@string/enter_the_zip_code"
        android:textAllCaps="false"
        android:textColor="@color/textColorDark"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/city_edit_text"
        tools:layout_editor_absoluteX="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>