<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingVertical="20dp"
    android:background="@drawable/white_rounded_edge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/login"
        android:textColor="@color/textColorDark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/community_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/connect_to_the_people_living_in_your_area"
        android:textAlignment="center"
        android:paddingHorizontal="30dp"
        android:textColor="@color/textColorDark"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="100dp"
        android:src="@drawable/google_logo"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/google_button"
        app:layout_constraintStart_toStartOf="@+id/google_button"
        app:layout_constraintTop_toTopOf="@+id/google_button"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/google_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/login_with_google"
        android:textColor="@color/textColorDark"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:background="@drawable/rounded_edge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="100dp"
        android:src="@drawable/fb_logo"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/fb_button"
        app:layout_constraintStart_toStartOf="@+id/fb_button"
        app:layout_constraintTop_toTopOf="@+id/fb_button"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/fb_button"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/blue_rounded_edge"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/facebook"
        android:textAllCaps="false"
        android:textColor="@color/textColorLight"
        android:textSize="16sp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/google_button" />


    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        app:layout_constraintTop_toBottomOf="@+id/fb_button" />


</androidx.constraintlayout.widget.ConstraintLayout>